# mlcast-datasets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  catalog.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: new-dataset-submission.md
.github/workflows/: ci-pypi-deploy.yml  data_availability_check.yml  deploy-docs-book.yml
docs/: _config.yml  _toc.yml  be_rmi_precipitation.ipynb  dmi_precipitation.ipynb  intro.md  it_dpc_precipitation.ipynb  radklim_precipitation.ipynb  uk_metoffice_precipitation.ipynb
docs/utils/: copyright_year_sphinxext.py
mlcast_datasets/: pyproject.toml
precipitation/: catalog.yml
src/mlcast_datasets/: __init__.py
src/mlcast_datasets/catalog/: catalog.yml
src/mlcast_datasets/catalog/precipitation/: catalog.yml
src/mlcast_datasets/tests/: test_catalog.py
tests/: test_catalog.py
