[project]
name = "mlcast-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "intake>=2.0.8",
    "intake-xarray>=2.0.0",
    "jinja2>=3.1.6",
    "s3fs>=2025.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "sh>=2.2.2",
]
