[project]
name = "mlcast-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "intake>=2.0.8",
    "intake-xarray>=2.0.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "s3fs>=2025.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "sh>=2.2.2",
]
notebooks = [
    "cartopy>=0.24.1",
    "dask>=2025.3.0",
    "matplotlib>=3.10.1",
]
docs = [
    "jupyter-book>=1.0.4.post1",
    "sphinxcontrib-mermaid>=1.0.0",
]
