[project]
name = "mlcast-datasets"
dynamic = ["version"]
description = "Intake catalog for datasets relevant for machine learning based nowcasting"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "intake>=2.0.8",
    "intake-xarray>=2.0.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "s3fs>=2025.0.0",
]
license = "Apache-2.0 OR BSD-3-Clause"
license-files = [
    "LICENSE-APACHE",
    "LICENSE-BSD",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "sh>=2.2.2",
]
notebooks = [
    "cartopy>=0.24.1",
    "dask>=2025.3.0",
    "matplotlib>=3.10.1",
]
docs = [
    "jupyter-book>=1.0.4.post1",
    "sphinxcontrib-mermaid>=1.0.0",
]

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = [
    "LICENSE-APACHE",
    "LICENSE-BSD",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlcast_datasets = ["catalog/*.yaml", "catalog/**/*.yaml"]

[tool.setuptools_scm]
version_scheme = "post-release"
